   Xavier Leroy)

* #9765: add init functions to Bigarray.
  (Jeremy Yallop, review by Gabriel Scherer, Nicolás Ojeda Bär, and
   Xavier Leroy)

* #9668: List.equal, List.compare
  (This could break code using "open List" by shadowing
   Stdlib.{equal,compare}.)
  (Gabriel Scherer, review by Nicolás Ojeda Bär, Daniel Bünzli and Alain Frisch)

- #9066: a new Either module with
  type 'a Either.t = Left of 'a | Right of 'b
  (Gabriel Scherer, review by Daniel Bünzli, Thomas Refis, Jeremy Yallop)

- #9066: List.partition_map :
    ('a -> ('b, 'c) Either.t) -> 'a list -> 'b list * 'c list
  (Gabriel Scherer, review by Jeremy Yallop)

- #9865: add Format.pp_print_seq
  (Raphaël Proust, review by Nicolás Ojeda Bär)

### Compiler user-interface and warnings (highlights):

- #9657: Warnings can now be referred to by their mnemonic name. The names are
  displayed using `-warn-help` and can be utilized anywhere where a warning list
  specification is expected.
      ocamlc -w +fragile-match
      ...[@@ocaml.warning "-fragile-match"]
  Note that only a single warning name at a time is supported for now:
  "-w +foo-bar" does not work, you must use "-w +foo -w -bar".
  (Nicolás Ojeda Bär, review by Gabriel Scherer, Florian Angeletti and
   Leo White)

- #8939: Command-line option to save Linear IR before emit.
  (Greta Yorsh, review by Mark Shinwell, Sébastien Hinderer and Frédéric Bour)

- #9003: Start compilation from Emit when the input file is in Linear IR format.
  (Greta Yorsh, review by Jérémie Dimino, Gabriel Scherer and Frédéric Bour)

### Language features (highlights):

* #9500, #9727, #9866, #9870, #9873: Injectivity annotations
  One can now mark type parameters as injective, which is useful for
  abstract types:
    module Vec : sig type !'a t end = struct type 'a t = 'a array end
  On non-abstract types, this can be used to check the injectivity of
  parameters. Since all parameters of record and sum types are by definition